sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var position:Int = 0
  while(position != getValueCount() - 1){
  	if(position == 0)
  		position += 1
    else if(getValue(position - 1) > getValue(position + 1)){
      swap(position - 1, position + 1)
    	position -=
    }
    else
    	position += 1
  }
}